<resources>
    <string name="app_name">PassCode</string>


    <string name="full_screen_ad_key">ca-app-pub-9690208356370050/3001485085</string>
    <string name="native_ad_key">ca-app-pub-9690208356370050/5070913520</string>
    <string name="banner_ad_key">ca-app-pub-9690208356370050/6168334780</string>


    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="control_your_security">Control your security</string>
    <string name="security">Security</string>
    <string name="this_application_is_build_on_blockchain_so_that_you_can_get_100_security_across_websites_amp_applications_with_single_app"><![CDATA[This application is build on blockchain so that you can get 100% security across websites & applications with single app.]]></string>
    <string name="fast">Fast</string>
    <string name="everything_in_single_click">Everything in single click</string>
    <string name="add_genreate_store_transfer_sync_export_amp_copy_all_your_passwords_in_single_click_use_autofill_for_quick_action_without_opening_app"><![CDATA[Add, genreate, store, transfer, sync, export & copy all your passwords in single click. Use autofill for quick action without opening app.]]></string>
    <string name="frictionless_security">Frictionless Security</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="confirm_master_password">Confirm Master Password</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="personal_details">Personal details</string>
    <string name="home">Home</string>
    <string name="passwords">Passwords</string>
    <string name="settings">settings</string>
    <string name="search">search</string>
    <string name="analysis">Analysis</string>
    <string name="permissions">Permissions</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="autofill">Autofill</string>
    <string name="sync">Sync</string>
    <string name="priority">Priority</string>
    <string name="entertainment">Entertainment</string>
    <string name="spotify">Spotify</string>
    <string name="work">Work</string>
    <string name="_70_secured">70% secured</string>
    <string name="weak">Weak</string>
    <string name="risk">Risk</string>
    <string name="search_here">search here</string>
    <string name="gajanan">Gajanan</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile">Profile</string>
    <string name="backup">Backup</string>
    <string name="trusted_devices">Trusted devices</string>
    <string name="switch_account">Switch account</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="user_id">User id</string>
    <string name="password">Password</string>
    <string name="numbers">Numbers</string>
    <string name="length">Length</string>
    <string name="symbols">Symbols</string>
    <string name="lowercase">Lowercase</string>
    <string name="uppercase">Uppercase</string>
    <string name="regenerate">Regenerate</string>
    <string name="save_password">Save password</string>
    <string name="username_or_email_id">username or email id</string>
    <string name="link">Link</string>
    <string name="change_password">Change password</string>
    <string name="copy_password">Copy password</string>
    <string name="version">Version</string>
    <string name="about_the_app">About the App</string>
    <string name="our_mission">Our Mission</string>
    <string name="key_features">Key Features</string>
    <string name="meet_the_team">Meet the Team</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="join_us_on_social_media">Join Us on Social Media</string>
    <string name="work_steve_gmail_com">work.steve@gmail.com</string>
    <string name="use_another_account">Use Another Account</string>
    <string name="enter_master_password">Enter master password</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="logged_in_devices">Logged in devices</string>
    <string name="premium">Premium</string>
    <string name="generate">Generate</string>
    <string name="old_master_password">Old Master Password</string>
    <string name="new_master_password">New Master Password</string>
    <string name="_0000">0000</string>
    <string name="confirm_new_master_password">Confirm New Master Password</string>
    <string name="new_confirm_master_password">New Confirm Master Password</string>
    <string name="change_master_password">Change Master Password</string>
</resources>