<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">


    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        app:drawableTopCompat="@drawable/fill_home_ic" />

    <TextView
        android:id="@+id/analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analysis"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        app:drawableTopCompat="@drawable/empty_shield_search_ic" />

    <TextView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        app:drawableTopCompat="@drawable/empty_search_ic" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        app:drawableTopCompat="@drawable/empty_settings_ic" />

    </LinearLayout>


</LinearLayout>