<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:layout_marginHorizontal="25dp"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:text="@string/priority"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="2"
        tools:listitem="@layout/item_password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:text="@string/entertainment"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEntertainment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="5"
        tools:listitem="@layout/item_password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:text="@string/work"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="4"
            tools:listitem="@layout/item_password"/>


    </LinearLayout>

</ScrollView>