<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".ui.other.NewRecordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <Spinner
                android:id="@+id/spinnerName"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/spinner_underline"
                android:text="1.4.7"
                android:textColor="#707070"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/checkName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/tick_circle_ic"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/spinner_underline"
                android:text="1.4.7"
                android:textColor="#707070"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/checkCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/tick_circle_ic"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:text="@string/user_id"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/edId"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingHorizontal="9dp"
                android:background="@drawable/spinner_underline"
                android:hint="@string/username_or_email_id"
                android:textColor="#707070"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/checkUid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/tick_circle_ic"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D1D1D1"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingHorizontal="10dp"
            android:hint="@string/password"
            android:background="@drawable/textview_round_boarder"/>

        <ProgressBar
            android:id="@+id/passStrongness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:layout_marginHorizontal="3dp"
            android:progressTint="#FF0000"
            android:max="100"
            android:progress="0"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:text="@string/length"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tvLetterCount"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="00"
                android:background="@drawable/textview_round_boarder"
                android:paddingHorizontal="5dp"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/numberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="30"
                android:stepSize="1"
                android:value="0"
                app:tickColor="@color/black"
                app:labelBehavior="gone"
                app:trackHeight="9dp"
                app:thumbColor="@color/white"
                app:thumbStrokeWidth="2dp"
                app:thumbStrokeColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:text="@string/numbers"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <CheckBox
                android:id="@+id/isNumber"
                android:layout_width="25dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:text="@string/symbols"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <CheckBox
                android:id="@+id/isSymbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:text="@string/lowercase"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <CheckBox
                android:id="@+id/isLowerCase"
                android:layout_width="25dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:text="@string/uppercase"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <CheckBox
                android:id="@+id/isUpperCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGeneratePassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/round_boarder_2"
                android:fontFamily="@font/poppins"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                android:text="@string/regenerate"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveData"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/round_boarder_2"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="7dp"
                android:gravity="center"
                android:layout_weight="1"
                android:paddingHorizontal="10dp"
                android:text="@string/save_password"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>



    </LinearLayout>

</ScrollView>